--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "15.4.6",
