--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.35.0",
     "@coinbase/x402": "^0.5.1",
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "x402-fetch": "^0.5.1",
     "x402-next": "^0.5.2"
   },
   "devDependencies": {
