--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/cdp-core": "^0.0.20",
     "@coinbase/cdp-sdk": "^1.35.0",
     "@coinbase/x402": "^0.5.1",
     "@google/generative-ai": "^0.21.0",
