--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@coinbase/cdp-core": "^0.0.20",
+    "@coinbase/cdp-hooks": "^0.0.20",
+    "@coinbase/cdp-react": "^0.0.20",
     "@coinbase/cdp-sdk": "^1.35.0",
     "@coinbase/x402": "^0.5.1",
     "@google/generative-ai": "^0.21.0",
@@ -29,6 +31,7 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
+    "viem": "^2.33.3",
     "x402-fetch": "^0.5.1",
     "x402-next": "^0.5.2"
   },
